-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.2, 6.5
-
None
-
b12417130 (dev), 41e036ec7 (6.5), 4822af4f4 (6.4)
#include <QCoreApplication> #include <QProperty> class Object : public QObject { public: Object() noexcept { v.setBinding([this] { return x.value() + y.value() + z.value(); }); } Q_OBJECT_BINDABLE_PROPERTY(Object, int, v) Q_OBJECT_BINDABLE_PROPERTY(Object, int, x) Q_OBJECT_BINDABLE_PROPERTY(Object, int, y) Q_OBJECT_BINDABLE_PROPERTY(Object, int, z) }; int main(int argc, char *argv[]) { QCoreApplication a(argc, argv); Object c; c.x = 1; return a.exec(); }
Here, v depends on x, y and z. When I run this code, it crashes.
If I remove z from dependency of v, it does not crash.
For Gerrit Dashboard: QTBUG-111268 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
461441,1 | QObjectBindableProperty: Avoid use-after-free in notifyObservers | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
461275,3 | QObjectBindableProperty: Avoid use-after-free in notifyObservers | dev | qt/qtbase | Status: MERGED | +2 | 0 |
461439,2 | QObjectBindableProperty: Avoid use-after-free in notifyObservers | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
461440,2 | QObjectBindableProperty: Avoid use-after-free in notifyObservers | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |